# gravmag

./: .gitignore  Fourier_stuff.ipynb  LICENSE  Makefile  Poisson_relation.ipynb  README.md  RTP_Fourier.ipynb  anomalia_campo_total.ipynb  constants.py  environment.yml  eqlayer_Fourier.ipynb  grav_tensor.ipynb  gravity_disturbance.ipynb  gravity_disturbance_inside.ipynb  magnetic_field.ipynb  modem2gravmag.ipynb  modem_model  notes.xoj  plot_functions.py  plot_prism_surfaces.ipynb  prism.ipynb  prism.py  pyproject.toml  rectangular_prism_fields.py  references.md  regional_residual_separation_1.ipynb  regional_residual_separation_2.ipynb  relacao_poisson.ipynb  setup.cfg  test_check.py  test_prism.py  test_prism_functions.py  test_utils.py  total_field_anomaly.ipynb  utils.py
examples/: BCCB_eigenvalues.ipynb  BTTB_BCCB_matrices_I.ipynb  BTTB_BCCB_matrices_II.ipynb  Fourier_stuff.ipynb  Poisson_relation.ipynb  README.md  RTP_Fourier.ipynb  anomalous_magnetic_field.ipynb  anomalous_magnetic_field_2.ipynb  closed_form_eqlayer_grav.ipynb  closed_form_eqlayer_mag.ipynb  complex_model_1.ipynb  complex_model_2.ipynb  continuation.ipynb  continuation_Fourier.ipynb  continuation_eqlayer.ipynb  derivatives_Fourier.ipynb  derivatives_fourier.ipynb  downward_continuation.ipynb  field_numerical_derivatives.ipynb  flops_eql.ipynb  grav_tensor.ipynb  grav_tensor_eigenvalues.ipynb  gravity_disturbance.ipynb  gravity_disturbance_inside.ipynb  mag_field_components_Fourier.ipynb  magnetic_field.ipynb  magnetic_spetra.ipynb  matrix_eqlayer_grav.ipynb  modem2gravmag.ipynb  reduction_to_the_pole.ipynb  regional_residual_separation_1.ipynb  regional_residual_separation_2.ipynb  regional_residual_separation_grav.ipynb  regional_residual_separation_mag.ipynb  upward_continuation.ipynb
gravmag/: aux_vedo.py  check.py  constants.py  convolution.py  convolve.py  data_structures.py  eqlayer.py  filters.py  inverse_distance.py  plot_functions.py  rectangular_prism_fields.py  transforms.py  utils.py
gravmag-code/: Makefile  check.py
gravmag_code/: test_rectangular_prism_fields.py
htmlcov/: check_py.html  constants_py.html  gravmag-code_check_py.html  gravmag-code_constants_py.html  gravmag-code_rectangular_prism_fields_py.html  gravmag-code_utils_py.html  index.html  prism_functions_py.html  prism_py.html  rectangular_prism_fields_py.html  rectangular_prism_functions_py.html  status.json  test_check_py.html  test_prism_functions_py.html  test_prism_py.html  test_rectangular_prism_fields_py.html  test_rectangular_prism_functions_py.html  test_utils_py.html  tests_test_check_py.html  tests_test_rectangular_prism_fields_py.html  tests_test_utils_py.html  utils_py.html
notes/: Block_Toeplitz_circulant_matrices.ipynb  prism.xoj
tests/: test_check.py  test_convolve.py  test_data_structures.py  test_eqlayer.py  test_utils.py  (+5 more)
(+69 files in other folders)
