[metadata]
name = gravmag-code
version = 0.0.1
author = Vanderlei C. Oliveira Jr.
author_email = vanderlei@on.br
description = A simple package for processing/interpreting gravity/magnetic data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/birocoles/gravmag-code
project_urls =
    Bug Tracker = https://github.com/birocoles/gravmag_code/issues
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Topic :: Scientific/Geophysics
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent


[options]
package_dir =
    = gravmag-code
packages = find:
python_requires = >=3.7

[options.packages.find]
where = gravmag-code
