[metadata]
name = gravmag
version = 0.0.1
author = Vanderlei C. Oliveira Jr.
author_email = vanderlei@on.br
description = "A simple package for processing/interpreting gravity/magnetic data"
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
keywords = geoscience, geophysics
url = https://github.com/birocoles/gravmag
project_urls =
    Bug Tracker = https://github.com/birocoles/gravmag/issues
    Source Code = https://github.com/birocoles/gravmag
    Release Notes = https://github.com/birocoles/gravmag/releases
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Topic :: Scientific/Geophysics
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent


[options]
package_dir =
    = gravmag
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    numba
    matplotlib

[options.packages.find]
where = gravmag
